updated job experience

--- a/public/index.html
+++ b/public/index.html
@@ -898,10 +898,10 @@
               
             </div>
             <div class="card-text"><ul>
-<li>Developing AI capabilities of internal and customer-facing tools for the analysis of high-throughput microscopy datasets</li>
-<li>Designing RESTful web app using AWS+MySQL-based database system for image acquisition, storage, and analysis</li>
-<li>Implementing computer vision-based tools using PyTorch to improve effieciency, and reduce cost, of cell differentiation pipelines</li>
-<li>Building out propriety software platform for analysis of tissue-engineered muscled cells, yielding 2x speedup in end-to-end processing over original tool</li>
+<li>Developing AI capabilities of internal + customer-facing tools analyzing high-throughput microscopy datasets</li>
+<li>Designing RESTful web app w/ AWS + MySQL for image storage, and analysis</li>
+<li>Implementing computer vision tools using PyTorch to improve efficiency, and reduce cost, of cell differentiation pipelines</li>
+<li>Building out propriety software platform for analysis of tissue-engineered muscular cells, yielding 2x speedup in end-to-end processing over original tool</li>
 <li>Leading development of the data science team</li>
 </ul></div>
           </div>
@@ -995,11 +995,10 @@
               
             </div>
             <div class="card-text"><ul>
-<li>Developed computer vision models based on unsupervised and supervised machine learning algorithms for segmenting cortical tissue using adult human MRI, implemented in Python</li>
-<li>Designed graph neural network models to apply existing population-level cortical maps to unmapped MRI images, improving segmentation accuracies by upwards of 15% relative to volumetric CNN models</li>
-<li>Initiated cross-department study on resting-state brain dynamics using a novel modal decompoposition algorithm resulting in high-impact publication</li>
-<li>Developed turn-key pipeline for processing high-resolution structural and functional MRI images to identify centroids of functional activation using bash, Python, and Java</li>
-<li>Analyzed 1000+ adult human brain MRI scans (&gt;1.5TB of data) using shell scripting and distributed computing tools (Sun Grid Engine)</li>
+<li>Developed computer vision models based on unsupervised + supervised ML algorithms for segmenting cortical tissue using MRI, implemented in Python</li>
+<li>Designed graph neural network models to apply population-level cortical maps to unmapped MRI images, improving segmentation accuracies by &gt;15%, relative to conventional CNN models</li>
+<li>Initiated cross-department study on brain dynamics, resulting in high-impact publication</li>
+<li>Developed turn-key pipeline for processing 1000+ adult human MRI scans (&gt;1.5TB) using shell scripting and distributed computing (SGE)</li>
 <li>Thesis work resulted in 2+ high-impact peer-reviewed publications, 2+ international conference posters, and 3+ conference presentations</li>
 </ul></div>
           </div>
